# tubular-cpp

./: CMakeLists.txt  LICENSE  README.md  bootstrap-clang.sh  config.json  pSphere1.xpd  vcsetup.bat
pc/: CMakeLists.txt  tubular-cli.cc
src/: CMakeLists.txt  trackball.cc  trackball.h  tubular-config.cc  tubular-config.h  tubular-math.h  tubular-util.h  tubular.cc  tubular.h  type.h
src/curve/: catmul-rom-curve.cc  catmul-rom-curve.h  curve.cc  curve.h  frenet-frame.cc  frenet-frame.h
src/io/: config-loader.cc  config-loader.h  cyhair.cc  cyhair.h  load_xpd.cc  load_xpd.h  obj_writer.cc  obj_writer.h  tiny_obj_loader.cc  tiny_xpd.cc  tiny_xpd.h
src/logger/: CMakeLists.txt  logger.cc  logger.h
src/mesh/: triangle-mesh.cc  triangle-mesh.h
